--- a/css/index.scss
+++ b/css/index.scss
@@ -7,6 +7,10 @@
     margin    : 0;
     padding   : 1rem;
 
+    .clickable {
+        cursor: pointer;
+    }
+
     >.container {
         // display        : flex;
         // flex-direction : row;
@@ -18,6 +22,10 @@
         >.logo {
             padding  : 3rem 0;
             font-size: 3rem;
+
+            >img {
+                width: 100%;
+            }
         }
 
         >.search-box {
@@ -39,14 +47,18 @@
     }
 
     >.movie-list {
-        display       : flex;
-        flex-direction: row;
+        // display       : flex;
+        // flex-direction: row;
+
+        display        : inline-flex;
+        flex-wrap      : wrap;
+        justify-content: space-evenly;
 
         margin: 1rem 0;
 
         >.movie-container {
-            margin: 0 5px;
-            width : 25%;
+            margin: 1rem 5px;
+            width : 20%;
 
             >.movie-poster {
                 >img {
@@ -64,15 +76,16 @@
 
                     background-color: #D4D4D4;
 
-                    width        : 2.3em;
-                    height       : 2.3em;
-                    line-height  : 2em;
+                    width        : 2em;
+                    height       : 2em;
+                    line-height  : 1.8em;
                     border       : 0;
                     border-radius: 100%;
                 }
 
                 >.title {
-                    padding: 1em 0;
+                    padding    : 0.5em 0;
+                    font-weight: bold;
                 }
 
                 >.desc {
