--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+
 #App {
+    font-family: "Gothic A1", sans-serif;
+
     width     : 100%;
     height    : 100%;
     text-align: center;
@@ -24,22 +28,40 @@
             font-size: 3rem;
 
             >img {
-                width: 100%;
+                width    : 100%;
+                max-width: 700px;
             }
         }
 
         >.search-box {
             display: flex;
+            width  : 80%;
+            margin : auto;
 
             >input#query {
-                font-size    : 2rem;
-                width        : 100%;
-                border       : 1px #D4D4D4 solid;
-                border-radius: 3px;
+                font-size: 1.4rem;
+                width    : 100%;
+                padding  : 10px 0;
+
+                border       : none;
+                border-bottom: 1px #D4D4D4 solid;
+                outline      : none;
+
+                text-indent: 0.5rem;
+                text-align : center;
+
+                &::placeholder {
+                    color: #dee2e6;
+                }
             }
 
             >button.btn-search {
-                border: none;
+                width: 100px;
+
+                border       : none;
+                border-radius: 5px;
+
+                margin-left: 5px;
 
                 &:before {
                     content: '찾기';
