--- a/css/index.scss
+++ b/css/index.scss
@@ -15,13 +15,23 @@
         cursor: pointer;
     }
 
+    >.header {
+        height    : 3rem;
+        text-align: right;
+
+        >.language {
+            border: 1px #dee2e6 solid;
+            color : grey;
+        }
+    }
+
     >.container {
         // display        : flex;
         // flex-direction : row;
         // justify-content: center;
 
-        padding-top: 30%;
-        width      : 100%;
+        // padding-top: 30%;
+        width: 100%;
 
         >.logo {
             padding  : 3rem 0;
@@ -66,16 +76,15 @@
                 &:before {
                     content: '찾기';
                 }
-
-                &.searching {
-                    pointer-events: none;
-
-                    &:before {
-                        content: 'loading';
-                    }
-                }
             }
+
         }
+
+        // >.message-box {
+        //     padding  : 4px 0;
+        //     font-size: 0.8rem;
+        //     color    : red;
+        // }
     }
 
     >.movie-list {
@@ -110,7 +119,7 @@
 
                     width        : 2em;
                     height       : 2em;
-                    line-height  : 1.8em;
+                    line-height  : 2em;
                     border       : 0;
                     border-radius: 100%;
                 }
